added parsing function for Linux (Opt 1)