@@ -1,42 +1,52 @@
 package usbparser.linux;
 
-import icomit.usbparser.Main;
 import java.io.*;
 import java.text.SimpleDateFormat;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Date;
+import icomit.usbparser.Main;
+import static usbparser.linux.USBParse1T.deviceCountArr;
 
 //This class implements the scanner object from Main.java in order for the user to select a specific USB for parsing.
 
 public class USBParse1 {
 
     public static int index;
-    public static String deviceSize;
     public static String[] deviceIDArr;
     public static String staticDeviceID;
 
     public static int GetDeviceCount() throws IOException {
-        Process pr = Runtime.getRuntime().exec("wmic logicaldisk where drivetype=2 get DeviceID");
-        BufferedReader reader = new BufferedReader(new InputStreamReader(pr.getInputStream()));
+        String[] cmd1 = new String[] {"bash", "-c", " df -Th | grep sdb"};
+        String[] cmd2 = new String[] {"bash", "-c", " lsblk | grep sdb"};
+        Process proc1 = new ProcessBuilder(cmd1).start();
+        Process proc2 = new ProcessBuilder(cmd2).start();
+        
+        USBParse1T.PrintFileSystem(proc1);
+        USBParse1T.PrintSize(proc2);
+        /*
+        BufferedReader reader = new BufferedReader(new InputStreamReader(proc1.getInputStream()));
         String line = "";
         ArrayList<String> deviceCount = new ArrayList<String>();
-
         while ((line = reader.readLine()) != null) {
-            line = line.replaceAll("\\s", "");
-            if(line.endsWith(":")){
-                deviceCount.add(line);
+            drivePath = line.substring(0,14);
+            System.out.println("DrivePath: " + drivePath);
+            drivePath = drivePath.replaceAll("\\s", "");
+            deviceCount.add(drivePath);
+            if(line ==  null){
+            System.out.println("No USB Devices Found");
             }
         }
+
         String[] deviceCountArr = deviceCount.toArray(new String[0]);
         deviceIDArr = deviceCountArr;
         System.out.println("DeviceIDaArr " + Arrays.toString(deviceIDArr));
+                */
         System.out.print(deviceCountArr.length + " USB devices found " + Arrays.toString(deviceCountArr) + " Enter index of USB (0-" + (deviceCountArr.length -1)+ "): "); 
         String input1 = Main.in.nextLine();
-        
+        System.out.println("");
         Main.in.close();
-        index = Integer.parseInt(input1);
-        
+        index = Integer.parseInt(input1);  
         return index; 
     }
 
@@ -53,9 +63,10 @@ public class USBParse1 {
 
     public static void MoveDataToDrive(int index) throws IOException {
         ProcessBuilder processBuilder = new ProcessBuilder();
-        processBuilder.command("cmd.exe", "/c", "move driverproperties.txt " + GetDeviceID(deviceIDArr, index) + "/" );
+        processBuilder.command("bash", "-c", "mv driverproperties.txt /media/" + System.getProperty("user.name") + "/i-SECURE");
         processBuilder.start();
         
+        /*
         ProcessBuilder processBuilder1 = new ProcessBuilder();
         processBuilder1.command("cmd.exe", "/c", "xcopy Autorun.inf " + GetDeviceID(deviceIDArr, index) + " /h /y" );
         processBuilder1.start();
@@ -63,7 +74,7 @@ public class USBParse1 {
         ProcessBuilder processBuilder2 = new ProcessBuilder();
         processBuilder2.command("cmd.exe", "/c", "xcopy Driver.ico " + GetDeviceID(deviceIDArr, index) + " /h /y /n" );
         processBuilder2.start();
-
+        */
         // ProcessBuilder processBuilder3 = new ProcessBuilder();
         // processBuilder3.command("cmd.exe", "/c", "runas /profile /user:administrator /savecred \"mountvol " + staticDeviceID + " /p\"" );
         // processBuilder3.start();
@@ -77,7 +88,7 @@ public class USBParse1 {
         return GB;
     }
 
-    public static void main(Process[] process, String[] processName) throws IOException {
+    public static void main() throws IOException {
         index = GetDeviceCount();
         FileWriter fw = new FileWriter("driverproperties.txt");
         SimpleDateFormat formatter= new SimpleDateFormat("MM/dd/yyyy 'at' HH:mm z");
@@ -85,28 +96,15 @@ public class USBParse1 {
 
         Boolean deviceSizeBool = false;
         fw.write("i-SECURE" + "| Parsed " + formatter.format(date) + "\n\n");
-        for (int i = 0; i < process.length; i++){
-            BufferedReader reader = new BufferedReader(new InputStreamReader(process[i].getInputStream()));
-            String line = "";
-            ArrayList<String> selectedLines = new ArrayList<String>();
-            while ((line = reader.readLine()) != null) {
-                // System.out.println(line); 
-                if(line.matches("^[0-9].*")){
-                    line = line.replaceAll("\\s", "");
-                    selectedLines.add(line);
-                }
-            }
-            if(!deviceSizeBool){
-                // System.out.println("deviceSize" + "=" + selectedLines.get(index));
-                fw.write("Usable Space (in GBs): " + ConvertToGB(selectedLines.get(index)) + "\n\n");
-                deviceSizeBool = true;
-            }
-            fw.write(processName[i] + selectedLines.get(index) + "\n");
-            // GetReadWriteSpeed(deviceIDArr, index);
+        fw.write("File System: " + USBParse1T.fileSystem + "\n");
+        fw.write("Drive Size: " + USBParse1T.driveSize + "\n\n");
+        for (int i = 0; i < index; i++){
+            
+
         }
         fw.write("\ngithub.com/i-comit/icomit-usbparser");
         fw.close();
         MoveDataToDrive(index);
-        System.out.println("Parsing USB Device " + staticDeviceID + " ..");
+        System.out.println("Parsing USB Device " + GetDeviceID(deviceIDArr, index) + " ..");
     }
 }
